# Causality-Medical-Image-Domain-Generalization

./: .gitignore  Journal_dices.ipynb  configs_exp.py  dev_traintest_ginipa.py  pyproject.toml  resampleCIMDG_back.sh  results.ipynb
biasfield_interpolate_cchen/: adv_bias.py  adv_transformation_base.py
data/E1/: README.md
data/E3/: README.md
data/E4/: README.md
data/abdominal/CHAOST2/: s1_dcm2nii.sh
dataloaders/: AbdominalDataset.py  abd_dataset_utils.py  transform_utils.py
exp_scripts/: E1.sh  E1_inference.sh  E2.sh  E2_inference.sh  E3.sh  E3_inference.sh  E3u4.sh  E4.sh  E4_inference.sh
models/: exp_trainer.py  imagefilter.py  imagefilter3d.py  segloss.py  smpmodels.py
